{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 119,
  "lineage": "521d8533-5917-7ab1-a01b-3fcc61426d8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "levelup-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104398007503:loadbalancer/levelup-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "levelup-elb-1092117187.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "levelup-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "levelup-elb",
            "region": "us-east-1",
            "security_groups": [
              "sg-0c5ea4c98e3187b37"
            ],
            "source_security_group": "104398007503/levelup-elb-sg",
            "source_security_group_id": "sg-0c5ea4c98e3187b37",
            "subnets": [
              "subnet-0908ac75fe3f55518",
              "subnet-0cc27225ca5777651"
            ],
            "tags": {
              "Name": "levelup-elb"
            },
            "tags_all": {
              "Name": "levelup-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.levelup-elb-securitygroup",
            "aws_subnet.levelupvpc-public-1",
            "aws_subnet.levelupvpc-public-2",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "levelup-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:internet-gateway/igw-0950fff54598f8e00",
            "id": "igw-0950fff54598f8e00",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelup-gw"
            },
            "tags_all": {
              "Name": "levelup-gw"
            },
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "levelup-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:route-table/rtb-01ee27aa89534ff94",
            "id": "rtb-01ee27aa89534ff94",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0950fff54598f8e00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "levelup-public-1"
            },
            "tags_all": {
              "Name": "levelup-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-01ee27aa89534ff94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e52d9cd0cb4ec73",
            "region": "us-east-1",
            "route_table_id": "rtb-01ee27aa89534ff94",
            "subnet_id": "subnet-0908ac75fe3f55518"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0284481beee6031aa",
            "region": "us-east-1",
            "route_table_id": "rtb-01ee27aa89534ff94",
            "subnet_id": "subnet-0cc27225ca5777651"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-2",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6e35cbddbd67197",
            "region": "us-east-1",
            "route_table_id": "rtb-01ee27aa89534ff94",
            "subnet_id": "subnet-019910de8ac5cbdf5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-3",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levelup-elb-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group/sg-0c5ea4c98e3187b37",
            "description": "security group for Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5ea4c98e3187b37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "levelup-elb-sg",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "levelup-elb-sg"
            },
            "tags_all": {
              "Name": "levelup-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-0c5ea4c98e3187b37",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "levelup-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group/sg-0805daaaadb77d100",
            "description": "security group for instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0805daaaadb77d100",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5ea4c98e3187b37"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "levelup-instance",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "levelup-instance"
            },
            "tags_all": {
              "Name": "levelup-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-0805daaaadb77d100",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.levelup-elb-securitygroup",
            "aws_vpc.levelupvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-078a16b153ac341df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078a16b153ac341df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-078a16b153ac341df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0fcdaf900a6fb7748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcdaf900a6fb7748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0fcdaf900a6fb7748",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-038d7b505a3243298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038d7b505a3243298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-038d7b505a3243298",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0908ac75fe3f55518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0908ac75fe3f55518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-1"
            },
            "tags_all": {
              "Name": "levelupvpc-public-1"
            },
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0908ac75fe3f55518",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0cc27225ca5777651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc27225ca5777651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-2"
            },
            "tags_all": {
              "Name": "levelupvpc-public-2"
            },
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0cc27225ca5777651",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-019910de8ac5cbdf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019910de8ac5cbdf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-3"
            },
            "tags_all": {
              "Name": "levelupvpc-public-3"
            },
            "vpc_id": "vpc-0c8d59056366ea738"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-019910de8ac5cbdf5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levelupvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:vpc/vpc-0c8d59056366ea738",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03905694916194c62",
            "default_route_table_id": "rtb-089be85f5a0a23b2e",
            "default_security_group_id": "sg-0dd75946b86a24c1d",
            "dhcp_options_id": "dopt-0cc6d18ca1e4f3013",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8d59056366ea738",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089be85f5a0a23b2e",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc"
            },
            "tags_all": {
              "Name": "levelupvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "vpc-0c8d59056366ea738",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}